# MagElementPublic

./: .gitignore  README.md
test/: README.MD
test/MagElementTestLinux/: CMakeLists.txt  LICENSE  README.md
test/MagElementTestWindows/: MagElementTestWindows.sln  MagElementTestWindows.vcxproj  MagElementTestWindows.vcxproj.filters  README.md
test/include/: MagElementData.hpp  gmplatform.h  helptext.h  licensetext.h
test/src/: TcpConnectionTest.cpp  TestClient.cpp  TestOptions.cpp  TestOptions.hpp
